fix: article h3 overflow

--- a/src/sass/news.scss
+++ b/src/sass/news.scss
@@ -16,6 +16,9 @@
 				font: normal normal 300 38px/47px Source Sans Pro;
 				color: #d5874c;
 				padding: 1rem;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 			img {
 				width: 100%;
